--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,4 @@ jobs:
 
       - name: Run a multi-line script
         run: |
-          echo {{ USERNAME }}
-          echo {{ EMAIL }}
+          echo ${{ GITHUB_ACTOR }}
