--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,13 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Run a multi-line script
+      - name: Create report
+        run: date +%s > report.txt
+
+      - name: Commit report
         run: |
-          echo ${GITHUB_ACTOR}
+          git config user.name ${{ GITHUB_ACTOR }}
+          git config user.email 'steve@digitalmine.com'
+          git add .
+          git commit -am "Keeping my contibutions green!"
+          git push
