--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Commit report
         run: |
-          git config user.name ${{ GITHUB_ACTOR }}
+          git config user.name ${ GITHUB_ACTOR }
           git config user.email 'steve@digitalmine.com'
           git add .
           git commit -am "Keeping my contibutions green!"
