--- a/.github/workflows/contrib.yml
+++ b/.github/workflows/contrib.yml
@@ -16,11 +16,15 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Create report
-        run: date +%s > report.txt
-
-      - name: Commit report
+      - name: Create and commit report
+        env:
+          CURRENT_HOUR: date +"$H"
+          RANDOM_HOUR: $((( RANDOM % 24 )))
+        if: $CURRENT_HOUR != $RANDOM_HOUR
         run: |
+          echo 'Current Hour: $CURRENT_HOUR'
+          echo 'Random Hour: $RANDOM_HOUR'
+          date +%s > report.txt
           git config user.name 'stevewithington'
           git config user.email 'steve@digitalmine.com'
           git add .
